@@ -1,5 +1,6 @@
 package com.example.demo.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,20 +8,26 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
+
+    @Value("${cors.allowed-origins}")
+    private List<String> allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Permitir múltiples orígenes
-        configuration.setAllowedOrigins(Arrays.asList(
-            "https://miguelv145.github.io",      // Frontend en GitHub Pages            
-            "http://localhost:4200",              // Frontend local (Angular)
-            "http://localhost:8080"               // Backend local
-        ));
+        // Permitir múltiples orígenes desde configuración
+        configuration.setAllowedOrigins(allowedOrigins);
+
+        configuration.setAllowedOriginPatterns(List.of(
+        "http://localhost:4200",
+        "https://miguelv145.github.io",
+        "https://*.web.app"
+    ));
         
         // Métodos HTTP permitidos
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
@@ -38,7 +45,8 @@ public class CorsConfig {
         configuration.setExposedHeaders(Arrays.asList(
             "Authorization",
             "Content-Type",
-            "X-Total-Count"
+            "X-Total-Count",
+            "Content-Disposition"
         ));
         
         // Permitir credenciales (JWT en headers de Authorization)
